applications/v2/5e-tools/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 5e-tools
  labels:
    app: 5e-tools
spec:
  selector:
    app: 5e-tools
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  type: ClusterIP
