applications/v2/5e-tools/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dnd-5e-tools
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # For automatic cert generation using Let's Encrypt
    cert-manager.io/cluster-issuer: "cloudflare-prod"
spec:
  tls:
    - hosts:
        - 5e-tools.lshadler.dev
      secretName: 5e-tools-tls
  rules:
    - host: 5e-tools.lshadler.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dnd-5e-tools
                port:
                  number: 80
